--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "dependencies": {
         "@koa/cors": "^2.2.3",
-        "bcrypt-nodejs": "0.0.3",
+        "bcrypt": "^3.0.4",
         "dotenv": "^6.2.0",
         "jsonwebtoken": "^8.3.0",
         "koa": "^2.6.1",
