refactor server reponses + doc swagger implementation + auto generate doc

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-DBURI_DEV =
+DBURI_DEV = mongodb://localhost:27017/nodejs-api-rest-model
 DBURI_PROD = 
 
-PORT_DEV =
+PORT_DEV = 8080
 PORT_PROD =
 
-JWTSECRET_DEV =
+JWTSECRET_DEV = secret
 JWTSECRET_PROD =
 
-SALT_DEV =
+SALT_DEV = 10
 SALT_PROD = 
