--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "devDependencies": {
         "js-yaml": "^3.12.1",
         "nodemon": "^1.17.2",
+        "pluralize": "^7.0.0",
         "replace": "^1.0.1"
     }
 }
