--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
         "@koa/cors": "^2.2.3",
         "bcrypt": "^3.0.4",
         "dotenv": "^6.2.0",
+        "joi": "^14.3.1",
         "jsonwebtoken": "^8.3.0",
         "koa": "^2.6.1",
         "koa-body": "^4.0.4",
         "koa-respond": "^2.1.0",
         "koa-router": "^7.4.0",
         "mongoose": "^5.3.6",
-        "swagger2-koa": "^1.0.3",
-        "validator": "^10.8.0"
+        "swagger2-koa": "^1.0.3"
     },
     "scripts": {
         "start": "set NODE_ENV=DEV&&nodemon  --watch src ./src/server.js",
