add test + simplify response of user crud

--- a/.env
+++ b/.env
@@ -1,11 +1,15 @@
 DBURI_DEV = mongodb://localhost:27017/nodejs-api-rest-model
+DBURI_TEST = mongodb://localhost:27017/nodejs-api-rest-model-test
 DBURI_PROD = 
 
 PORT_DEV = 8080
+PORT_TEST= 8081
 PORT_PROD =
 
 JWTSECRET_DEV = secret
+JWTSECRET_TEST = secret
 JWTSECRET_PROD =
 
 SALT_DEV = 10
+SALT_TEST = 10
 SALT_PROD = 
