--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
     "scripts": {
         "start": "set NODE_ENV=DEV&&nodemon  --watch src ./src/server.js",
         "start-prod": "set NODE_ENV=PROD&&nodemon  --watch src ./src/server.js",
-        "lint": "eslint . --ext js --ignore-pattern node_modules/"
+        "lint": "eslint . --ext js --ignore-pattern node_modules/",
+        "test-serve": "set NODE_ENV=TEST&&nodemon --watch src ./src/server.js",
+        "test": "set NODE_ENV=TEST&&mocha"
     },
     "devDependencies": {
+        "chai": "^4.2.0",
+        "chai-http": "^4.2.1",
         "eslint": "^5.15.1",
         "js-yaml": "^3.12.1",
         "minimist": "^1.2.0",
+        "mocha": "^6.0.2",
         "nodemon": "^1.17.2",
         "pluralize": "^7.0.0",
         "replace": "^1.0.1"
